[gd_scene load_steps=23 format=3 uid="uid://cj2cpb6fvctdd"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_aka8e"]
[ext_resource type="Resource" uid="uid://bt8exkx4nhe4u" path="res://Inventory/PlayerInvertory.tres" id="2_arv4g"]
[ext_resource type="Texture2D" uid="uid://cual5lhml31ug" path="res://Player/MaskFrog/Shadow.png" id="2_elkp0"]
[ext_resource type="Script" path="res://Player/Weapon.gd" id="5_k8k3k"]
[ext_resource type="Texture2D" uid="uid://cygatgaipqio5" path="res://Player/MaskFrog/SpriteSheet.png" id="6_8r0cn"]
[ext_resource type="PackedScene" uid="uid://bqkbomvweelja" path="res://Player/sword.tscn" id="7_hd546"]

[sub_resource type="Animation" id="Animation_muw7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0944]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_m3o2k"]
resource_name = "attackDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0944, 4.18879]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, -0.2), Vector2(0, 2), Vector2(-6, -0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 16]
}

[sub_resource type="Animation" id="Animation_arje7"]
resource_name = "attackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.0944, -1.5708, -0.872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-6.75, 0.25), Vector2(-10.75, -4), Vector2(-7.055, -15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 18]
}

[sub_resource type="Animation" id="Animation_5rml2"]
resource_name = "attackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0944, 1.5708, 0.872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6.75, 0.25), Vector2(10.75, -4), Vector2(7.055, -15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 19]
}

[sub_resource type="Animation" id="Animation_4dujq"]
resource_name = "attackUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.872665, 0.872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-4.25, -16.25), Vector2(-0.25, -18.5), Vector2(5, -16.75)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 17]
}

[sub_resource type="Animation" id="Animation_5cyb7"]
resource_name = "walkDown"
length = 0.7
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_8r8rv"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_2ereb"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_gawnf"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e1kvv"]
_data = {
"RESET": SubResource("Animation_muw7n"),
"attackDown": SubResource("Animation_m3o2k"),
"attackLeft": SubResource("Animation_arje7"),
"attackRight": SubResource("Animation_5rml2"),
"attackUp": SubResource("Animation_4dujq"),
"walkDown": SubResource("Animation_5cyb7"),
"walkLeft": SubResource("Animation_8r8rv"),
"walkRight": SubResource("Animation_2ereb"),
"walkUp": SubResource("Animation_gawnf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_maw17"]
size = Vector2(13, 5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x2pen"]
radius = 6.25
height = 12.5

[sub_resource type="Animation" id="Animation_22dso"]
resource_name = "HurtBlink"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.588235), Color(1, 1, 1, 0.686275)]
}

[sub_resource type="Animation" id="Animation_5ymne"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bamdj"]
_data = {
"HurtBlink": SubResource("Animation_22dso"),
"RESET": SubResource("Animation_5ymne")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58g8w"]
size = Vector2(20, 18)

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_aka8e")
inventory = ExtResource("2_arv4g")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(0, -8)
texture = ExtResource("6_8r0cn")
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0)

[node name="Shadow" type="Sprite2D" parent="."]
z_as_relative = false
position = Vector2(-0.5, -0.75)
scale = Vector2(1.25, 1)
texture = ExtResource("2_elkp0")

[node name="Anims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e1kvv")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_maw17")

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
z_index = 1
position = Vector2(-0.25, -5.75)
shape = SubResource("CapsuleShape2D_x2pen")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bamdj")
}

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="Weapon" type="Node2D" parent="."]
visible = false
position = Vector2(6, -0.2)
rotation = 2.0944
script = ExtResource("5_k8k3k")
metadata/_edit_group_ = true

[node name="Sword" parent="Weapon" instance=ExtResource("7_hd546")]
position = Vector2(1.09278e-07, 1.25)

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_58g8w")

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="hurtBox" to="." method="_on_hurt_box_area_exited"]
